fix bug collapses about

--- a/src/components/scss/Appartment.scss
+++ b/src/components/scss/Appartment.scss
@@ -27,6 +27,7 @@
     &__tags {
         margin: 20px 0px;
         display: flex;
+        flex-wrap: wrap;
         gap: 10px;
     }
 
