--- a/src/components/scss/CollapseAppartment.scss
+++ b/src/components/scss/CollapseAppartment.scss
@@ -20,7 +20,7 @@
     }
 
     &__collapse--open {
-        margin-bottom: 230px;
+        margin-bottom: 30%;
     }
 
     &__container--arrows {
@@ -67,7 +67,7 @@
     }
 
     .collapses-appartment__collapse--open {
-        margin-bottom: 270px;
+        margin-bottom: 50%;
     }
 }
 
@@ -83,7 +83,7 @@
     }
 
     .collapses-appartment__collapse--open {
-        margin-bottom: 135px;
+        margin-bottom: 50%;
     }
 
     .collapses-appartment__container--arrows {
